[fix] make sure instructions is a headline

--- a/index.html
+++ b/index.html
@@ -128,11 +128,12 @@
 				<dd>Set of Five size 2 - 3</dd>
 		</dl>
 
-		<strong>Instructions</strong>
+		<h3>Instructions</h2>
+
 		<div class="instructions">
 			<section id="shaft">
 
-			<h2>Shaft</h2>
+			<h3>Shaft</h3>
 
 			<dl>
 				<dt>Row 1</dt>
@@ -147,7 +148,7 @@
 			</section>
 
 			<section id="heel">
-				<h2>Heel</h2>
+				<h3>Heel</h3>
 
 				<p>Knit along the stitches of the <em>first</em> and <em>fourth</em> needle.</p>
 
@@ -204,13 +205,13 @@
 			</section>
 
 			<section id="foot">
-				<h2>Foot</h2>
+				<h3>Foot</h3>
 
 				<p>Knit straight until heel to cap start measures <strong data-var="foot"> cm</strong>.</p>
 			</section>
 
 			<section id="cap">
-				<h2>Cap</h2>
+				<h3>Cap</h3>
 
 				<p>
 					For the first and the third needle knit until the third last stitch, then knit the
